Telemetry/kube-pr/mysanpete-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: my-sanpete-deployment
  labels:
    app: my-sanpete
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-sanpete
  template:
    metadata:
      labels:
        app: my-sanpete
    spec:
      containers:
      - name: my-sanpete
        image: 144.17.92.12:5000/codebras/mysanpete:${RUN_SALT}
        ports:
        - containerPort: 8080
