Telemetry/kube-pr/mysanpete-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: my-sanpete-service
spec:
  type: ClusterIP
  selector:
    app: my-sanpete
  ports:
    - port: 80
      targetPort: 8080
