Telemetry/kube-pr/mysanpete-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: my-sanpete-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ${PULL_REQUEST_ID}.mysanpetekube.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-sanpete-service
            port:
              number: 80
